tests/NormalTests/paczka1/small_fuzzy/90778418.err
Error in line 1: fxxaGzZ S397 36,9
Error in line 8: RlmQsinEsNw S537 -1,4
Error in line 2: fxxaGzZ S537 92,9
Error in line 7: RlmQsinEsNw S537 61,3
